# cardano-peras

./: .envrc  .gitignore  README.md  default.nix  flake.nix
.github/: secret_scanning.yml
.github/workflows/: ci.yml
dashboard/: .prettierrc.js  README.md  default.nix  design.md  package.json  pnpm-lock.yaml  vue.config.js
dashboard/public/: index.html
dashboard/src/: App.vue  main.ts  metrics.ts  shims-jstat.d.ts
demo/: README.md  default.nix  docker.nix  launch.sh  overlay.nix
demo/env/: configuration.yaml  shelley-genesis.json
design/: .latexmkrc  README.md  bib.bib  conclusion.tex  default.nix  implementation.tex  interactions.tex  introduction.tex  peras-design.tex  preamble.tex  testing.tex
design/appendix/: attack-scenarios.tex  certs.tex  rewards.tex
design/architecture/: block-body.tex  historical-certs.tex  ledger.tex  minting.tex  n2c.tex  object-diffusion.tex  other-aspects.tex  overview.tex  protocol-parameters.tex  vote-cert-diffusion.tex  vote-cert-storage.tex  votes-and-certs.tex  weighted-blocks.tex
design/protocol-changes/: ledger.tex  minting.tex  (+9 more)
dev-local/: .gitignore  Main.hs  Populate.hs  README.md  dev-local.cabal  main  process-compose.yaml  shell.nix
docs/: abstract-protocol.md  convert_csv_to_mermaid.py  convert_mermaid_to_csv.py  git-process.md  pre-alpha.md  roadmap-draft.md  roadmap.csv  roadmap.md  weekly-updates.md
scripts/: honest-vote-splitting.py
testnet/: Main.hs  Misc.hs  Network.hs  Populate.hs  README.md  default.nix  launch.sh  process-compose.yaml  shell.nix  testnet.cabal
testnet/nix/: cardano.nix
(+123 files in other folders)
